Fix on mobile ui/responsive
bit css changes on the categories and sites

--- a/workspace/SocialPub/css/ourstyle.css
+++ b/workspace/SocialPub/css/ourstyle.css
@@ -426,8 +426,6 @@ Title of article
     font-size: 17px;
     margin: 0px;
     padding: 0px;
-    /*position: absolute;*/
-    /*bottom: 0px;*/
     text-align: center;
     text-shadow: -1px -1px 0 #cdcdcd, 1px -1px 0 #cdcdcd, -1px 1px 0 #cdcdcd, 1px 1px 0 #cdcdcd;
 }
@@ -475,10 +473,15 @@ Notification
 }
 
 #rightContent ul li {
-    margin: 10px 0px 10px 0px;
+    margin: 10px 0px 5px 0px;
     list-style:none;
 }
 #rightContent ul li a{
     font-size:17px;
     text-decoration: none;
+    color:#4c4c4c;
+    text-shadow: 0px 0px 0 #cdcdcd, 0px 0px 0 #cdcdcd, 0px 0px 0 #cdcdcd, 1px -1px 0 #cdcdcd;
+}
+#rightContent ul li a:hover{
+    color: #1173ce;
 }
